Fix header when scrolling, it wasn't working due to overflow of menu

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,11 @@
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 1em;
+  width: 100%;
   height: 64px;
   background-color: #fff;
   box-shadow: 0 1px 5px 0 rgba(33, 51, 67, 0.12);
