--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@ body, #root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 body {
@@ -25,6 +24,11 @@ body {
 body,
 input {
   font-family: 'Inter', sans-serif;
+}
+
+/* This is for the header */
+#root {
+  padding-top: 64px;
 }
 
 code {
